--- a/src/includes/styles/content/spacing.css
+++ b/src/includes/styles/content/spacing.css
@@ -8,4 +8,5 @@ iframe,
 pre,
 table {
   margin-bottom: 1rem;
+  margin-top: 1rem;
 }
